# ProjetPPIL

./: .gitignore  README.md  Rapport_PPIL_LEOST_Maelan_THUILLIER_Colin.docx  uml.md  ~$pport_PPIL_LEOST_Maelan_THUILLIER_Colin.docx
ClienCpp/: CMakeLists.txt  Cercle.cpp  Cercle.h  Erreur.cpp  Erreur.h  Forme.cpp  Forme.h  FormeComplexe.cpp  FormeComplexe.h  Matrices2x2.cpp  Matrices2x2.h  Polygone.cpp  Polygone.h  Segment.cpp  Segment.h  Triangle.cpp  Triangle.h  Vecteur2D.cpp  Vecteur2D.h  main.cpp
ClienCpp/COR/: ChargeurListeForme.cpp  ChargeurListeForme.h  ExpertChargement.cpp  ExpertChargement.h  ExpertChargementCOR.cpp  ExpertChargementCOR.h  ExpertChargementCercleCOR.cpp  ExpertChargementCercleCOR.h  ExpertChargementFormeComplexeCOR.cpp  ExpertChargementFormeComplexeCOR.h  ExpertChargementPolygoneCOR.cpp  ExpertChargementPolygoneCOR.h  ExpertChargementSegmentCOR.cpp  ExpertChargementSegmentCOR.h  Factory.cpp  Factory.h  sauvergardeExpert.txt
ClienCpp/COR/FichiersTest/: TestCORCercle  TestCORFormeComplexe  TestCORPolygone  TestCORSegment
ClienCpp/Communication/: InitCommunication.cpp  InitCommunication.h
ClienCpp/Erreur/: Erreur.cpp
ClienCpp/Formes/: Cercle.cpp  Cercle.h  Couleur.cpp  Couleur.h  Forme.cpp  Forme.h  FormeComplexe.cpp  FormeComplexe.h  Matrices2x2.cpp  Matrices2x2.h  Polygone.cpp  Polygone.h  Segment.cpp  Segment.h  Vecteur2D.cpp
ClienCpp/Sauvegarde/: mabellefigure1.txt  sauvegarde.txt
ClienCpp/Visiteur/: Visiteur.cpp  Visiteur.h  VisiteurDeLibrairie.cpp  VisiteurDeLibrairie.h  VisiteurDeSauvegardeTxt.h
ClienCpp/Visiteur/Librairie/: VisiteurDeLibrairie.cpp  VisiteurDeLibrairie.h  VisiteurDeLibrairieJava.cpp  VisiteurDeLibrairieJava.h
ClienCpp/Visiteur/Sauvegarde/: VisiteurDeSauvegarde.cpp  VisiteurDeSauvegarde.h  VisiteurDeSauvegardeTxt.cpp  VisiteurDeSauvegardeTxt.h
ClienCpp/Visitor/: VisiteurDeLibrairie.cpp
Documentation/Client/html/: _cercle_8h_source.html  _chargeur_liste_forme_8h_source.html  _couleur_8h_source.html  _erreur_8h_source.html  _expert_chargement_8h_source.html  _expert_chargement_c_o_r_8h_source.html  _expert_chargement_cercle_c_o_r_8h_source.html  _expert_chargement_forme_complexe_c_o_r_8h_source.html  _expert_chargement_polygone_c_o_r_8h_source.html  _expert_chargement_segment_c_o_r_8h_source.html  _forme_8h_source.html  _forme_complexe_8h_source.html  _init_communication_8h_source.html  _matrices2x2_8h_source.html  _polygone_8h_source.html  _segment_8h_source.html  _vecteur2_d_8h_source.html  _visiteur_de_librairie_8h_source.html  _visiteur_de_librairie_java_8h_source.html  _visiteur_de_sauvegarde_8h_source.html  _visiteur_de_sauvegarde_txt_8h_source.html  annotated.html  class_cercle-members.html  class_cercle.html  class_cercle__coll__graph.dot  class_cercle_a7f3717971519416c789f42ee771ab9ef_icgraph.dot  class_cercle_ab87cb1469bb1c99f5f0c56064caea1e3_cgraph.dot  class_erreur-members.html  (+190 more)
Documentation/UML/: uml.md
Projet_Synthèse_LEOST_Maelan_THUILLIER_Colin/: CMakeLists.txt  Cercle.cpp  Cercle.h  Constante.h  Erreur.cpp  Erreur.h  Forme.cpp  Forme.h  FormeComplexe.h  Groupe.cpp  Groupe.h  Matrices2x2.cpp  Matrices2x2.h  Polygone.cpp  Polygone.h  Triangle.cpp  Triangle.h  Vecteur.cpp  Vecteur.h  Vecteur2D.cpp  Vecteur2D.h  main.cpp  segment.cpp  segment.h
ServeurJavaPPIL/ChainOfResponsibility/: DessinerCercle.java  DessinerFormeComplexe.java  DessinerPolygone.java  DessinerSegment.java  Expert.java  ExpertDessiner.java
ServeurJavaPPIL/Monde/: Vecteur2D.java
ServeurJavaPPIL/Serveur/: Communication.java  Interlocuteur.java
ServeurJavaPPIL/Tests/: TestDessin.java  TestDessinCercle.java  TestExpert.java  TestVecteur.java
exec/: ClientCpp
(+240 files in other folders)
