cmake_minimum_required(VERSION 3.23)
project(Projet_Synthèse_LEOST_Maelan_THUILLIER_Colin)

set(CMAKE_CXX_STANDARD 14)

add_executable(Projet_Synthèse_LEOST_Maelan_THUILLIER_Colin main.cpp Vecteur.cpp Vecteur.h Erreur.cpp Erreur.h Cercle.cpp Cercle.h Forme.cpp Forme.h segment.cpp segment.h Groupe.cpp Groupe.h Polygone.cpp Polygone.h)
